# storage/api-docs/api-docs.json
@@ -1,15 +1,8 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Integration Swagger in Laravel with Passport Auth Documentation",
-        "description": "Implementation of Swagger with in Laravel",
-        "contact": {
-            "email": "admin@admin.com"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
+        "title": "Documentation for Agent Valo API",
+        "description": "API for all valorant agents",
         "version": "1.0.0"
     },
     "servers": [
